libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/use-struct-path.jsonc
//@ run: fail
//@ description: path values that aren't identifiers should fail
[
  "::kernel::special_form::use",
  "::core",
  {
    "#struct": {
      "x": "::core::math::sub"
      //~^ ERROR Use a simple identifier here
    }
  },
  "x"
]
